# ts

./: AUTHORS  COPYING  ChangeLog  Makefile.am  config.h  configure.ac  configure.in  doxygen.conf.in  help.c  help.h  opt.c  opt.h  stamp.c  stamp.h  test.c  timestamp.spec  timestamp.spec.in  ts.1  ts.c
